<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background image</string>
    <string name="app_logo">App logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="dominate_the_league">Find a team in your city, and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="i_am_a">I am a:</string>
    <string name="select_league_toast">Please select a league</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
    <string name="skill_finish_toast">Please select a skill level</string>
</resources>
